// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AbsoluteCenter> renders correctly 1`] = `
<div
  className="center"
>
  Text
</div>
`;

exports[`<AbsoluteCenter> responds to a vertical prop 1`] = `
<div
  className="center vertical"
>
  Text
</div>
`;
